--- a/test.html
+++ b/test.html
@@ -1,1 +1,18 @@
 <script src="math.js"></script>
+<script src="graph.js"></script>
+
+<div class="holder" id="hold">
+	
+</div>
+
+<style>
+	.holder{
+		width:1000px;
+		height:500px;
+		transform: scale(-1, -1);
+	}
+	.bar_graph{
+		position: relative;
+    	float: right;	
+	}
+</style>
