update soduku design

--- a/sudoku.html
+++ b/sudoku.html
@@ -1,32 +1,179 @@
-<div id="soduku">
- <input id="cell" type="number" min="1" max="9">
+<script src="check.js"></script>
+<div class="full_board">
+  <div class="soduku_full_column">
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell1_1_1" value="1" type="number" min="1" max="9">
+        <input id="cell1_2_1" value="1" type="number" min="1" max="9">
+        <input id="cell1_3_1" value="1" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell1_1_2" value="2" type="number" min="1" max="9">
+        <input id="cell1_2_2" value="2" type="number" min="1" max="9">
+        <input id="cell1_3_2" value="2"  type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell1_1_3" value="2" type="number" min="1" max="9">
+        <input id="cell1_2_3" value="2"  type="number" min="1" max="9">
+        <input id="cell1_3_3" value="2"  type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+  </div>
+  <div class="soduku_full_column">
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+  </div>
+  <div class="soduku_full_column">
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+        <input id="cell" type="number" min="1" max="9">
+      </div>
+    </div>
+  </div>
 </div>
-
-<script>
-	var cell = document.getElementById("soduku").innerHTML;
-	var new_text = "<div id='block_across'>";
-	for(var i=0; i < 3;i++){
-		new_text = new_text.concat(cell)
-	}
-	new_text = new_text.concat("</div>");
-	document.getElementById("soduku").innerHTML = new_text;
-
-
-	var block_across = document.getElementById("block_across").innerHTML;
-	var new_text = "<div id='full_block'>";
-	for(var i=0; i < 3;i++){
-		new_text = new_text.concat(block_across )
-	}
-	new_text = new_text.concat("</div>")
-	document.getElementById("block_across").innerHTML = new_text;
-</script>
+<button onclick="check()">Check</button>
 <style>
-#soduku{
-	border:1px solid red;
-	width:200px;
-	width:200px;
+.soduku_inner{
+  border:0.5px solid whitesmoke;
+  width:150px;
+  padding-top:5px;
+  padding-left:5px;
+  padding-bottom:5px;
 }
-#cell{
-	width:32%;
+.soduku_full_column{
+  position:relative;
+  float:left;
+}
+.full_board{
+  background-color:grey;
 }
 </style>
