check all blocks

--- a/sudoku.html
+++ b/sudoku.html
@@ -1,127 +1,128 @@
+<html>
 <script src="check.js"></script>
 <div class="full_board">
   <div class="soduku_full_column">
     <div class="soduku_inner">
       <div id="row">
         <input id="cell1_1_1" value="1" type="number" min="1" max="9">
-        <input id="cell1_2_1" value="1" type="number" min="1" max="9">
-        <input id="cell1_3_1" value="1" type="number" min="1" max="9">
+        <input id="cell1_2_1" value="2" type="number" min="1" max="9">
+        <input id="cell1_3_1" value="3" type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell1_1_2" value="2" type="number" min="1" max="9">
-        <input id="cell1_2_2" value="2" type="number" min="1" max="9">
-        <input id="cell1_3_2" value="2"  type="number" min="1" max="9">
+        <input id="cell1_1_2" value="4" type="number" min="1" max="9">
+        <input id="cell1_2_2" value="5" type="number" min="1" max="9">
+        <input id="cell1_3_2" value="6"  type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell1_1_3" value="2" type="number" min="1" max="9">
-        <input id="cell1_2_3" value="2"  type="number" min="1" max="9">
-        <input id="cell1_3_3" value="2"  type="number" min="1" max="9">
-      </div>
-    </div>
-    <div class="soduku_inner">
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell1_1_3" value="7" type="number" min="1" max="9">
+        <input id="cell1_2_3" value="8"  type="number" min="1" max="9">
+        <input id="cell1_3_3" value="9"  type="number" min="1" max="9">
       </div>
     </div>
     <div class="soduku_inner">
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell2_1_1" value="" type="number" min="1" max="9">
+        <input id="cell2_2_1" value="" type="number" min="1" max="9">
+        <input id="cell2_3_1" value="" type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell2_1_2" value="" type="number" min="1" max="9">
+        <input id="cell2_2_2" value="" type="number" min="1" max="9">
+        <input id="cell2_3_2" value=""  type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-    </div>
-  </div>
-  <div class="soduku_full_column">
-    <div class="soduku_inner">
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell2_1_3" value="" type="number" min="1" max="9">
+        <input id="cell2_2_3" value=""  type="number" min="1" max="9">
+        <input id="cell2_3_3" value=""  type="number" min="1" max="9">
       </div>
     </div>
     <div class="soduku_inner">
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell3_1_1" value="" type="number" min="1" max="9">
+        <input id="cell3_2_1" value="" type="number" min="1" max="9">
+        <input id="cell3_3_1" value="" type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell3_1_2" value="" type="number" min="1" max="9">
+        <input id="cell3_2_2" value="" type="number" min="1" max="9">
+        <input id="cell3_3_2" value=""  type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-    </div>
-    <div class="soduku_inner">
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-      </div>
-      <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell3_1_3" value="" type="number" min="1" max="9">
+        <input id="cell3_2_3" value=""  type="number" min="1" max="9">
+        <input id="cell3_3_3" value=""  type="number" min="1" max="9">
       </div>
     </div>
   </div>
   <div class="soduku_full_column">
     <div class="soduku_inner">
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell4_1_1" value="" type="number" min="1" max="9">
+        <input id="cell4_2_1" value="" type="number" min="1" max="9">
+        <input id="cell4_3_1" value="" type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell4_1_2" value="" type="number" min="1" max="9">
+        <input id="cell4_2_2" value="" type="number" min="1" max="9">
+        <input id="cell4_3_2" value=""  type="number" min="1" max="9">
       </div>
       <div id="row">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
-        <input id="cell" type="number" min="1" max="9">
+        <input id="cell4_1_3" value="" type="number" min="1" max="9">
+        <input id="cell4_2_3" value=""  type="number" min="1" max="9">
+        <input id="cell4_3_3" value=""  type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell5_1_1" value="" type="number" min="1" max="9">
+        <input id="cell5_2_1" value="" type="number" min="1" max="9">
+        <input id="cell5_3_1" value="" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell5_1_2" value="" type="number" min="1" max="9">
+        <input id="cell5_2_2" value="" type="number" min="1" max="9">
+        <input id="cell5_3_2" value=""  type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell5_1_3" value="" type="number" min="1" max="9">
+        <input id="cell5_2_3" value=""  type="number" min="1" max="9">
+        <input id="cell5_3_3" value=""  type="number" min="1" max="9">
+      </div>
+    </div>
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell6_1_1" value="" type="number" min="1" max="9">
+        <input id="cell6_2_1" value="" type="number" min="1" max="9">
+        <input id="cell6_3_1" value="" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell6_1_2" value="" type="number" min="1" max="9">
+        <input id="cell6_2_2" value="" type="number" min="1" max="9">
+        <input id="cell6_3_2" value=""  type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell6_1_3" value="" type="number" min="1" max="9">
+        <input id="cell6_2_3" value=""  type="number" min="1" max="9">
+        <input id="cell6_3_3" value=""  type="number" min="1" max="9">
+      </div>
+    </div>
+  </div>
+  <div class="soduku_full_column">
+    <div class="soduku_inner">
+      <div id="row">
+        <input id="cell7_1_1" value="" type="number" min="1" max="9">
+        <input id="cell7_2_1" value="" type="number" min="1" max="9">
+        <input id="cell7_3_1" value="" type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell7_1_2" value="" type="number" min="1" max="9">
+        <input id="cell7_2_2" value="" type="number" min="1" max="9">
+        <input id="cell7_3_2" value=""  type="number" min="1" max="9">
+      </div>
+      <div id="row">
+        <input id="cell3_1_3" value="" type="number" min="1" max="9">
+        <input id="cell3_2_3" value=""  type="number" min="1" max="9">
+        <input id="cell3_3_3" value=""  type="number" min="1" max="9">
       </div>
     </div>
     <div class="soduku_inner">
@@ -160,7 +161,8 @@
     </div>
   </div>
 </div>
-<button onclick="check()">Check</button>
+<button onclick="full_check()">Check</button>
+</html>
 <style>
 .soduku_inner{
   border:0.5px solid whitesmoke;
