--- a/sudoku.html
+++ b/sudoku.html
@@ -162,6 +162,9 @@
   </div>
 </div>
 <button onclick="full_check()">Check</button>
+<div id="message_box">
+  
+</div>
 </html>
 <style>
 .soduku_inner{
